# darling-file

./: README.md
file/: CMakeLists.txt
file/magic/: magic.mgc
